added display and clear function

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <div id="logo" class="logo toprow">logo</div>
 
                 <div id="display" class="display">
-                    <div id="tally" class="tally displayvalues">1234 + 123 * 2 / 7 - 5</div>
-                    <div id="total" class="total displayvalues">RESULT123ERR</div>
+                    <div id="tally" class="tally displayvalues"></div>
+                    <div id="total" class="total displayvalues"></div>
                 </div>
 
                 <div id="clear" class="button hvr-push row1">C</div>
